# internal/posts/ports/handler.go
@@ -9,6 +9,7 @@ func MountHandlers(server *HttpServer, router *gin.RouterGroup) {
 		authorized.POST("/", server.CreatePost)
 		authorized.DELETE("/:post_id", server.DeletePost)
 		authorized.PUT("/up/:post_id", server.UpwotePost)
+		authorized.PUT("/down/:post_id", server.DownwotePost)
 	}
 
 	router.GET("/list", server.ListPosts)
